JS CSS - fixed grades bug overflow

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -181,6 +181,7 @@ main{
         border:solid 3px var(--text);
         color: var(--text);
         padding:1rem;
+        white-space: nowrap;
     }
 }
 
